kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnvos-acf
  labels:
    app: cnvos-acf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnvos-acf
  template:
    metadata:
      labels:
        app: cnvos-acf
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: cnvos-acf-storage
          emptyDir: {}
      containers:
        - name: acf
          image: cnvos-acf
          volumeMounts:
            - name: cnvos-acf-storage
              mountPath: /storage
          command:
            - gunicorn
            - acf.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 200m
        - name: acf-nginx
          image: nginx:alpine
          volumeMounts:
            - name: cnvos-acf-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 50m
