kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnvos-acf
spec:
  selector:
    app: cnvos-acf
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cnvos-acf-nginx
spec:
  selector:
    app: cnvos-acf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
