kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnvos-acf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - acf.lb.djnd.si
        - acf.cnvos.si
      secretName: cnvos-acf-tls
  rules:
    - host: acf.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnvos-acf
                port:
                  number: 8000
    - host: acf.cnvos.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnvos-acf
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnvos-acf-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.acf.lb.djnd.si
      secretName: cnvos-acf-nginx-tls
  rules:
    - host: files.acf.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnvos-acf-nginx
                port:
                  number: 80
